# ratatoskr

./: .env-template  .gitignore  .pre-commit-config.yaml  .pyup.yml  CHANGELOG.md  GitHub_Tools_List.csv  GitHub_Tools_List.xls  LICENSE  Pipfile  README.md  __init__.py  pyproject.toml  ratatoskr.py  requirements.txt  runner.sh  sbom.json  sbom.xml
.github/workflows/: codeql-analysis.yml  codeql.yml
ratatoskr/: __init__.py  ratatoskr.py
src/ratatoskr/: __init__.py  convert_to_csv.py  ratatoskr.py
src/tests/: ratatoskr_test.py
tests/: ratatoskr_test.py
