[tool.poetry]
name = "ratatoskr"
version = "0.4.0"
description = "A webhook notifier for new commits or releases in GitHub and GitLab repositories"
authors = ["axi0m <axi0m@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
requests = "^2.28.0"
requests-html = "^0.10.0"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
