[tool.poetry]
name = "ratatoskr"
version = "0.5.0"
description = "A webhook notifier for new commits or releases in GitHub and GitLab repositories"
authors = ["axi0m <axi0m@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.28.0"
rich = "^12.4.4"
python-dotenv = "^0.20.0"
xlrd = "^2.0.1"
cyclonedx-bom = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
